<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">LeTournApp_v1_0</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="button_text_chap_att">Chapel Attendance</string>
    <string name="button_text_announcements">Announcements</string>
    <string name="button_text_hours">Hours</string>
    <string name="button_text_login_info">Login Settings</string>
    <string name="button_text_save">Save</string>
    <string name="button_text_clear">Clear</string>
    <string name="label_username">User</string>
    <string name="username_hint">UserName</string>
    <string name="password_hint">Password</string>
    <string name="label_password">Password</string>
    <string name="title_activity_chap_att">Chapel Attendance</string>
    <string name="title_activity_announcements">Announcements</string>
    <string name="title_activity_schedule_hours">Hours</string>
    <string name="chap_att_label_initial_text">Waiting on credentials&#8230;</string>
    <string name="button_text_chap_att_refresh">Refresh</string>
    <string name="button_text_hours_change_day">Change day</string>
    <string name="title_activity_login_settings">LoginSettings</string>

</resources>
