<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0070C0"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.swengr2_di_dj_ly.letournapp_v1_0.LoginSettings" >
  

    <TextView
        android:id="@+id/username_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:textColor="@color/LeTournApp_color_yellow"
        android:textSize="20sp"
        android:text="@string/label_username" />

    <EditText
        android:id="@+id/username_textField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/password_textField"
        android:layout_alignRight="@+id/password_textField"
        android:layout_below="@+id/username_textView"
        android:layout_marginTop="15dp"
        android:background="#FFF"
        android:ems="10"
        android:hint="@string/username_hint"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    

    <TextView
        android:id="@+id/password_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username_textField"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:textColor="@color/LeTournApp_color_yellow"
        android:textSize="20sp"
        android:text="@string/label_password" />

    <EditText
        android:id="@+id/password_textField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password_textView"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        android:background="#FFF"
        android:ems="10"
        android:hint="@string/password_hint"
        android:inputType="textPassword" />

    <Button
        android:id="@+id/save_button"
        style="@style/MenuButton"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignLeft="@+id/password_textField"
        android:layout_below="@+id/password_textField"
        android:layout_marginTop="59dp"
        android:text="@string/button_text_save" />

    <Button
        android:id="@+id/clear_button"
        style="@style/MenuButton"
        android:layout_width="100dp"
        android:layout_height="30dp"
        android:layout_alignBaseline="@+id/save_button"
        android:layout_alignBottom="@+id/save_button"
        android:layout_alignRight="@+id/password_textField"
        android:text="@string/button_text_clear" />

</RelativeLayout>