<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/RelativeLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#0070C0"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.swengr2_di_dj_ly.letournapp_v1_0.MainActivity" >

    <Button
        android:id="@+id/chap_att_button"
        style="@style/MenuButton"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:onClick="chapAttButtonPressed"
        android:text="@string/button_text_chap_att" />

    <Button
        android:id="@+id/announc_button"
        style="@style/MenuButton"
        android:layout_alignLeft="@+id/chap_att_button"
        android:layout_below="@+id/chap_att_button"
        android:onClick="announcButtonPressed"
        android:text="@string/button_text_announcements" />

    <Button
        android:id="@+id/hours_button"
        style="@style/MenuButton"
        android:layout_alignLeft="@+id/announc_button"
        android:layout_below="@+id/announc_button"
        android:onClick="hoursButtonPressed"
        android:text="@string/button_text_hours" />
    
    <Button 
        android:id="@+id/login_info_button"
        style="@style/MenuButton"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/activity_vertical_margin"
        android:layout_alignLeft="@+id/hours_button"
        android:onClick="loginSettingsButtonPressed"
        android:text="@string/button_text_login_info"/>

</RelativeLayout>
